--- a/1.16/assets/minecraft/textures/lang/en_us.json
+++ b/1.16/assets/minecraft/textures/lang/en_us.json
@@ -75,10 +75,10 @@
   "menu.multiplayer": "Multiplayer",
   "menu.online": "Minecraft Realms",
   "menu.options": "Options...",
-  "menu.quit": "Quit Game",
-  "menu.returnToMenu": "Save and Quit to Title",
+  "menu.quit": "Return To Human",
+  "menu.returnToMenu": "Save and Return To Human",
   "menu.disconnect": "Disconnect",
-  "menu.returnToGame": "Back to Game",
+  "menu.returnToGame": "Back To Monkey",
   "menu.generatingLevel": "Generating world",
   "menu.loadingLevel": "Loading world",
   "menu.savingLevel": "Saving world",
@@ -93,7 +93,7 @@
   "menu.sendFeedback": "Give Feedback",
   "menu.reportBugs": "Report Bugs",
   "menu.paused": "Game Paused",
-  "menu.modded": " (Modded)",
+  "menu.modded": " (Monkified)",
   "optimizeWorld.confirm.title": "Optimize World",
   "optimizeWorld.confirm.description": "This will attempt to optimize your world by making sure all data is stored in the most recent game format. This can take a very long time, depending on your world. Once done, your world may play faster but will no longer be compatible with older versions of the game. Are you sure you wish to proceed?",
   "optimizeWorld.title": "Optimizing World '%s'",
@@ -257,10 +257,10 @@
   "datapackFailure.safeMode": "Safe Mode",
   "editGamerule.title": "Edit Game Rules",
   "editGamerule.default": "Default: %s",
-  "gameMode.survival": "Survival Mode",
-  "gameMode.creative": "Creative Mode",
+  "gameMode.survival": "Monkey Mode",
+  "gameMode.creative": "God Monkey Mode",
   "gameMode.adventure": "Adventure Mode",
-  "gameMode.spectator": "Spectator Mode",
+  "gameMode.spectator": "Ghost Monkey Mode",
   "gameMode.hardcore": "Hardcore Mode!",
   "gameMode.changed": "Your game mode has been updated to %s",
   "spectatorMenu.previous_page": "Previous Page",
@@ -497,7 +497,7 @@
   "options.invertMouse": "Invert Mouse",
   "options.fov": "FOV",
   "options.fov.min": "Normal",
-  "options.fov.max": "Quake Pro",
+  "options.fov.max": "Monkey Go Brrr",
   "options.screenEffectScale": "Distortion Effects",
   "options.screenEffectScale.off": "Off",
   "options.screenEffectScale.tooltip": "Strength of nausea and Nether portal screen distortion effects.\nAt lower values, the nausea effect is replaced with a green overlay.",
@@ -518,7 +518,7 @@
   "options.gamma.max": "Bright",
   "options.sensitivity": "Sensitivity",
   "options.sensitivity.min": "*yawn*",
-  "options.sensitivity.max": "HYPERSPEED!!!",
+  "options.sensitivity.max": "MONKEY SPIN!!",
   "options.renderDistance": "Render Distance",
   "options.entityDistanceScaling": "Entity Distance",
   "options.viewBobbing": "View Bobbing",
@@ -1400,7 +1400,7 @@
   "block.minecraft.player_head": "Player Head",
   "block.minecraft.player_head.named": "%s's Head",
   "block.minecraft.creeper_wall_head": "Creeper Wall Head",
-  "block.minecraft.creeper_head": "Creeper Head",
+  "block.minecraft.creeper_head": "Monkey Head",
   "block.minecraft.dragon_wall_head": "Dragon Wall Head",
   "block.minecraft.dragon_head": "Dragon Head",
   "block.minecraft.end_gateway": "End Gateway",
